--- a/Learn_to_add.ipynb
+++ b/Learn_to_add.ipynb
@@ -5,8 +5,10 @@
     "colab": {
       "name": "Learn-to-add.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMnrUyoD5HzVwLajLO256sd",
+      "collapsed_sections": [
+        "W6ilKF-bXBZi"
+      ],
+      "authorship_tag": "ABX9TyOyN3D7N5mOVqYPH6P07wWs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +44,7 @@
         "import random\n",
         "from torch.autograd import Variable"
       ],
-      "execution_count": 154,
+      "execution_count": 163,
       "outputs": []
     },
     {
@@ -52,10 +54,11 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vv0uo0LzaA4q",
-        "outputId": "596af6b0-66cc-4ab7-aa2b-37c91abe1afe"
+        "outputId": "d52c98de-a7cf-4919-c8bd-f7a38cd42101"
       },
       "source": [
-        "# allow reproducibility for find better model and window and horizon size\n",
+        "# allow reproducibility to find better model and window and horizon size\n",
+        "\n",
         "#seed = random.randrange(10000000)\n",
         "# this is a good seed, extracted from some random seed consecutive tests\n",
         "seed = 5787229\n",
@@ -64,7 +67,7 @@
         "random.seed(seed)\n",
         "print (seed)"
       ],
-      "execution_count": 155,
+      "execution_count": 164,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +95,7 @@
         "    y = self.fc1(x)\n",
         "    return y"
       ],
-      "execution_count": 156,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -116,28 +119,7 @@
         "\n",
         "input_size = 2\n"
       ],
-      "execution_count": 157,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "3vXzqlDJVUJG"
-      },
-      "source": [
-        "# DATASET LINEAR EASY\n",
-        "if False:\n",
-        "  x_values = [i for i in range(11)]\n",
-        "  x_train = np.array(x_values, dtype=np.float32)\n",
-        "  x_train = x_train.reshape(-1, 1)\n",
-        "\n",
-        "  y_values = [2*i+1 for i in x_values]\n",
-        "  y_train = np.array(y_values, dtype=np.float32)\n",
-        "  y_train = y_train.reshape(-1, 1)\n",
-        "\n",
-        "  input_size = 1"
-      ],
-      "execution_count": 158,
+      "execution_count": 166,
       "outputs": []
     },
     {
@@ -147,7 +129,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mMeDh6NaKPLx",
-        "outputId": "216a004c-22ca-4364-d33a-7e5adf906ab4"
+        "outputId": "ded933ae-effc-44fa-9dab-dfc6261c1cc5"
       },
       "source": [
         "# print dataset for debug\n",
@@ -157,12 +139,9 @@
         "\n",
         "print (\" \")\n",
         "print (\"X shape is %s\" % (str(torch.tensor(x_values).shape)))\n",
-        "print (\"Y shape is %s\" % (str(torch.tensor(y_values).shape)))\n",
-        "\n",
-        "#print (\"X is\")\n",
-        "#print(torch.tensor(x_values))\n"
+        "print (\"Y shape is %s\" % (str(torch.tensor(y_values).shape)))"
       ],
-      "execution_count": 159,
+      "execution_count": 167,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,6 +163,15 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fHo0ElMOd7BH"
+      },
+      "source": [
+        "# Train Config"
       ]
     },
     {
@@ -209,8 +197,17 @@
         "criterion = torch.nn.MSELoss() \n",
         "optimizer = torch.optim.SGD(model.parameters(), lr=learningRate)"
       ],
-      "execution_count": 160,
+      "execution_count": 168,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eofG1lndd1rf"
+      },
+      "source": [
+        "## Let's **TRAIN**"
+      ]
     },
     {
       "cell_type": "code",
@@ -219,7 +216,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hmlbc4D7MTnb",
-        "outputId": "29616129-dbcc-43d0-c9cf-c3332a29884c"
+        "outputId": "fc627deb-f3fa-4f0e-f100-05010b1516c4"
       },
       "source": [
         "# TRAIN\n",
@@ -231,13 +228,6 @@
         "  inputs.to(device)\n",
         "  labels.to(device)\n",
         "  \n",
-        "  # inputs must be flattened from 10x2 to 20\n",
-        "  # inputs = inputs.view(1, -1)\n",
-        "  #print(inputs.shape)\n",
-        "  #print(inputs)\n",
-        "  #print(labels.shape)\n",
-        "  #print(labels)\n",
-        "\n",
         "  # Clear gradient buffers because we don't want any gradient from previous epoch to carry forward, dont want to cummulate gradients\n",
         "  optimizer.zero_grad()\n",
         "\n",
@@ -260,7 +250,7 @@
         "print('epoch {}, loss {}'.format(epoch, loss.item()))\n",
         "print (\"FINISHED! -------\")"
       ],
-      "execution_count": 161,
+      "execution_count": 169,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +278,7 @@
         "id": "W6ilKF-bXBZi"
       },
       "source": [
-        "Good! Now let's validate"
+        "## Good! Now let's validate"
       ]
     },
     {
@@ -298,22 +288,29 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w8RVtLbTXGW-",
-        "outputId": "c4c74a9b-9c08-4021-f80b-8aa521482460"
+        "outputId": "0b7b149f-5e94-4ff8-fc87-c8598fcfbf91"
       },
       "source": [
         "validation_dataset = [\n",
+        "                      # insert here you test data as [x, x1] where y = x + x1. \n",
+        "                      # Note: y will be predicted by the net\n",
         "                      [10, 3],\n",
         "                      [99, 2],\n",
         "                      [7,8]\n",
-        "                      ]\n",
+        "              ]\n",
+        "# list to numpy\n",
         "val_numpy = np.array(validation_dataset, dtype=np.float32)\n",
+        "# numpy to tensor to Variable\n",
         "val = Variable(torch.from_numpy(val_numpy).to(device))\n",
         "\n",
         "with torch.no_grad(): # we don't need gradients in the testing phase\n",
-        "    predicted = model(val).data.numpy()\n",
-        "    print(predicted)\n"
+        "    # fetch model prediction\n",
+        "    predicted = model(val)\n",
+        "    # extract numpy data \n",
+        "    y = predicted.data.numpy()\n",
+        "    print(y)\n"
       ],
-      "execution_count": 162,
+      "execution_count": 170,
       "outputs": [
         {
           "output_type": "stream",
